Fix #108: Ajahn Pasanno goes out of view on small screens; improved title spacing

--- a/pages/style.css
+++ b/pages/style.css
@@ -496,7 +496,6 @@ body {
     font-weight: 300;
     font-size: 2rem; 
     letter-spacing: 0.5px; 
-    margin-bottom: 1rem; 
     color: var(--color-primary);
 }
 
@@ -505,9 +504,7 @@ body {
     text-align: center;
     font-weight: 350;
     font-size: 1rem;
-	line-height: 0.2rem;
     letter-spacing: 0.5px; 
-    margin-bottom: 1rem; 
     color: var(--color-primary);
 }
 
@@ -546,13 +543,6 @@ h4 {
 
 h5 {
 	font-size: 1rem;
-}
-
-/* Main header */
-.header h1 {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 1rem;
 }
 
 /* No padding for paragaphs in homepage.html */
@@ -688,6 +678,7 @@ main.main-content p {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top left;
 }
 
 .hero-overlay {
@@ -703,6 +694,7 @@ main.main-content p {
     color: var(--color-white);
     font-size: 2.5rem;
     font-weight: 300;
+	text-align: center;
 }
 
 /* Content Grid */
